--- a/Day 3/styler.css
+++ b/Day 3/styler.css
@@ -1,3 +1,16 @@
+/* *{
+    margin: 0px;
+    padding: 0px;
+} */
+
 h2{
     background-color: orange;
+    position: relative;
+    left: 100px;
+}
+h3{
+    background-color: pink;
+    /* position: fixed;
+    top: 0px;
+    left: 250px; */
 }
