CSS Day 1 class

--- a/Day 3/styler.css
+++ b/Day 3/styler.css
@@ -14,3 +14,13 @@ h3{
     top: 0px;
     left: 250px; */
 }
+h4{
+    background-color: brown;
+    position: sticky;
+    top: 0px;
+}
+
+p{
+    background-color: chartreuse;
+    position: absolute;
+}
