--- a/Day 4/style.css
+++ b/Day 4/style.css
@@ -1,11 +1,13 @@
 .container{
-    height: 100px;
-    width: 100px;
+    background-color: beige;
+    display: flex;
+    flex-direction: column;
 }
 
 .box{
     height: 100px;
     width: 100px;
+    margin: 5px;
 }
 
 .first{
