--- a/Day 4/style.css
+++ b/Day 4/style.css
@@ -1,8 +1,10 @@
 .container{
+    height: 400px;
     background-color: beige;
     display: flex;
     flex-direction: row;
-    justify-content: ;
+    justify-content: center;
+    
 }
 
 .box{
