--- a/Day 4/style.css
+++ b/Day 4/style.css
@@ -2,7 +2,7 @@
     height: 500px;
     background-color: beige;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
 
 }
