--- a/Day 4/style.css
+++ b/Day 4/style.css
@@ -3,8 +3,7 @@
     background-color: beige;
     display: flex;
     flex-direction: column;
-    justify-content: center;
-
+    justify-content: end;
 }
 
 .box{
